Link pro Přeskočení Navigace v TM.cz
Creating "Skip Navigation" Links with stylization.

--- a/www.topmonks.cz/src/html/index.njk
+++ b/www.topmonks.cz/src/html/index.njk
@@ -57,12 +57,11 @@
   </style>
   <link rel="stylesheet" href="/assets/css/v2.css">
 {% endblock %}
-
 {% block content %}
   <script>document.querySelector(".tm-app-bar").classList.add("tm-app-bar--sticky");</script>
 
   <link rel="stylesheet" href="/assets/css/hp/jumbotron.css">
-  <section class="main-info jumbotron">
+  <section id="maincontent" class="main-info jumbotron">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
