--- a/www.topmonks.cz/src/html/shared/header.njk
+++ b/www.topmonks.cz/src/html/shared/header.njk
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/assets/css/header.css">
+
 <header class="tm-app-bar">
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
@@ -32,6 +33,8 @@
           TopMonks
         </a>
       </div>
+
+      <a class="screen-reader-shortcut" href="#maincontent">Přejít na hlavní obsah stránky.</a>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
         <nav id="navigation" class="tm-menu">
           <ul class="tm-menu__list">
