--- a/studio.topmonks.com/src/html/shared/header.njk
+++ b/studio.topmonks.com/src/html/shared/header.njk
@@ -52,6 +52,8 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet">
       </div>
     </div>
+
+    <a class="screen-reader-shortcut" href="#main_content">Přejít na hlavní obsah stránky.</a>
     <div class="mdc-layout-grid__inner tm-navigation-bar">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop">
         <nav class="tm-menu navigation-left">
