Link pro Přeskočení Navigace v TM Caffé

--- a/caffe.topmonks.cz/src/html/index.njk
+++ b/caffe.topmonks.cz/src/html/index.njk
@@ -48,8 +48,7 @@
           <div class="tm-hamburger__bar"></div>
         </div>
       </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-2-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-2-desktop">
         <a class="tm-logo" href="/" title="Go to homepage">
           <svg width="201" height="61" viewBox="0 0 201 61" fill="none" xmlns="http://www.w3.org/2000/svg">
             <title>TopMonks Caffè Logo</title>
@@ -109,6 +108,7 @@
           </svg>
         </a>
       </div>
+      <a class="screen-reader-shortcut" href="#main_content">Přejít na hlavní obsah stránky.</a>
       <div
         class="caffe_menu mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
         <nav id="navigation" class="tm-menu tm-menu--horizontal">
@@ -160,7 +160,7 @@
     }
   </script>
 </header>
-<main>
+<main id="main_content">
   <section id="introduction" class="introduction">
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
