Pořadí v Screenshots v Ingrid.io - opraveno

--- a/www.ingridapp.io/src/html/index.njk
+++ b/www.ingridapp.io/src/html/index.njk
@@ -262,30 +262,21 @@
           <tr>
             <td>
               <div class="bubble">1.</div>
+              <p>Define topic and let employees upload and prioritize ideas, choose
+                winner.</p>
             </td>
             <td>
               <div class="bubble">2.</div>
+              <p>Add idea value and enable final voting for management.</p>
             </td>
             <td>
               <div class="bubble">3.</div>
+              <p>Share innovation winners, track innovation progress and innovation
+                pipeline&nbsp;value.</p>
             </td>
             <td>
               <div class="bubble">4.</div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              Define topic and let employees upload and prioritize ideas,
-              choose winner.
-            </td>
-            <td>Add idea value and enable final voting for management.</td>
-            <td>
-              Share innovation winners, track innovation progress and
-              innovation pipeline value.
-            </td>
-            <td>
-              Let everybody know about innovation launch. Gather regular user
-              feedback.
+              <p>Let everybody know about innovation launch. Gather regular user feedback.</p>
             </td>
           </tr>
         </table>
