--- a/www.ingridapp.io/src/stylesheets/_screenshots.scss
+++ b/www.ingridapp.io/src/stylesheets/_screenshots.scss
@@ -15,7 +15,7 @@ section.screenshots {
     height: 100px;
     background-color: white;
     color: #333;
-    margin: auto;
+    margin: 0 auto 20px;
     text-align: center;
     line-height: 100px;
     border-radius: 50%;
