--- a/www.topmonks.com/src/html/shared/header.njk
+++ b/www.topmonks.com/src/html/shared/header.njk
@@ -83,9 +83,11 @@
         window.requestAnimationFrame(function() {
           if (window.matchMedia("(min-width: 841px)").matches) {
             menu.classList.add("tm-menu--horizontal");
+            menu.setAttribute("aria-hidden", "false");
           }
           else {
             menu.classList.remove("tm-menu--horizontal");
+            menu.setAttribute("aria-hidden", "true");
           }
           ticking = false;
         });
@@ -94,7 +96,8 @@
     });
 
     if (window.matchMedia("(min-width: 841px)").matches) {
-      menu.classList.toggle("tm-menu--horizontal");
+      var isHorizontal = menu.classList.toggle("tm-menu--horizontal");
+      menu.setAttribute("aria-hidden", !isHorizontal);
     }
   </script>
 </header>
