[www.topmonks.c*] Added aria label to hamburger

--- a/www.topmonks.cz/src/html/shared/header.njk
+++ b/www.topmonks.cz/src/html/shared/header.njk
@@ -4,7 +4,7 @@
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="tm-hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet">
-        <div class="tm-hamburger__container" aria-expanded="false" role="button">
+        <div class="tm-hamburger__container" aria-expanded="false" aria-label="Menu" role="button">
           <div class="tm-hamburger__bar"></div>
           <div class="tm-hamburger__bar"></div>
           <div class="tm-hamburger__bar"></div>
