Stylizace menu v mobilním zobrazení v TM.cz

--- a/www.topmonks.cz/src/stylesheets/v2.scss
+++ b/www.topmonks.cz/src/stylesheets/v2.scss
@@ -45,12 +45,11 @@ h3 {
 
 
 .tm-menu__list a {
-  color: var(--tm-black-title);
+  color: #FFFFFF;
 
   &:hover {
-    color: var(--tm-primary);
+    color: var(--tm-hamburger-label);
     text-decoration: none;
-    border-bottom: 2px solid var(--tm-primary-light);
   }
 }
 
