--- a/www.topmonks.cz/src/stylesheets/header.scss
+++ b/www.topmonks.cz/src/stylesheets/header.scss
@@ -1,6 +1,7 @@
 .screen-reader-shortcut {
   position: absolute;
   top: -1000em;
+
   &:focus {
     left: 6px;
     top: 7px;
@@ -22,22 +23,24 @@
 .tm-logo {
   display: flex;
   align-items: center;
-  font-size: 28px;
   font-weight: 700;
   line-height: 32px;
   letter-spacing: -1px;
   text-decoration: none;
   text-transform: uppercase;
   color: var(--tm-logo);
-  @media screen and (max-width: 479px) {
-    font-size: 24px;
+  @media (max-width: 839px) {
     padding-top: 2px;
     justify-content: flex-end;
   }
-  @media screen and (max-width: 839px) {
-    font-size: 24px;
-    padding-top: 2px;
-    justify-content: flex-end;
+  @media screen and (min-width: 540px) {
+    font-size: 28px;
+  }
+
+  svg {
+    @media (max-width: 539px) {
+      width: 22px;
+    }
   }
 }
 
@@ -50,6 +53,7 @@
   @media screen and (min-width: 840px) {
     display: none;
   }
+
   .tm-hamburger__container {
     display: inline-block;
     cursor: pointer;
@@ -58,15 +62,17 @@
     height: 18px;
     position: relative;
   }
+
   .tm-hamburger__container::after {
     content: "menu";
     color: var(--tm-hamburger-label);
     text-transform: uppercase;
     font-size: 13px;
     position: absolute;
-    top: 5px;
+    top: 7px;
     left: 36px;
   }
+
   .tm-hamburger__bar {
     background-color: var(--tm-primary);
     width: 20px;
@@ -74,13 +80,16 @@
     position: absolute;
     top: 16px;
     transition: transform 0.4s;
+
     &:first-of-type {
       transform: translateY(-6px);
     }
+
     &:last-of-type {
       transform: translateY(6px);
     }
   }
+
   .tm-hamburger__container--open {
     .tm-hamburger__bar:first-of-type {
       transform: rotate(-45deg);
@@ -126,15 +135,19 @@
 .tm-app-bar--sticky {
   background: var(--tm-white);
   box-shadow: var(--tm-basic-shadow);
+
   .tm-logo {
     color: var(--tm-black-title);
   }
+
   .tm-hamburger .tm-hamburger__bar {
     background-color: var(--tm-primary);
   }
+
   .tm-hamburger .tm-hamburger__container::after {
-    color: rgba(0, 0, 0, 0.25);
+    color: var(--tm-black-title);
   }
+
   @media screen and (min-width: 840px) {
     height: 78px;
     .tm-layout-wrapper {
@@ -145,6 +158,7 @@
     }
     .tm-menu__list a {
       color: var(--tm-black-title);
+
       &:hover {
         color: var(--tm-primary);
       }
@@ -154,15 +168,19 @@
 
 .tm-app-bar.tm-app-bar--open {
   color: #fff;
+
   .tm-hamburger__container::after {
-    color: rgba(255, 255, 255, 0.5);
+    color: #fff;
   }
+
   .tm-hamburger__bar {
     background-color: #fff;
   }
+
   .tm-logo {
     color: #fff;
   }
+
   .tm-menu {
     transform: translate(-8px, -64px);
     z-index: -1;
@@ -204,18 +222,17 @@
   justify-content: flex-end;
   margin: 0;
 }
+
 .tm-menu--horizontal .tm-menu__list a {
   text-transform: uppercase;
   font-weight: bold;
   display: inline-block;
   padding: 4px 8px;
   color: var(--tm-black-title);
-
   &:hover {
     color: var(--tm-primary);
   }
 }
-
 
 
 .tm-menu--horizontal .tm-menu__list li + li {
