--- a/zive.tv/src/html/topmonks-caffe/index.njk
+++ b/zive.tv/src/html/topmonks-caffe/index.njk
@@ -180,8 +180,8 @@
         fill="#fff"/>
     </svg>
     <h1>
-      <b>TopMonks Caffè: Investice do startupu pro každého</b>
-      <small>Živé vysílání - úterý 2. března 2021 od 19.00</small>
+      <b>TopMonks Caffè: Jak se připravit na (ux)designové procesy v roce 2021</b>
+      <small>Živé vysílání - úterý 6. dubna 2021 od 19.00</small>
     </h1>
   </header>
   <div class="restream-box" style="--aspect-ratio: 16/9;">
