--- a/www.hackercamp.cz/src/stylesheets/main.scss
+++ b/www.hackercamp.cz/src/stylesheets/main.scss
@@ -5,3 +5,33 @@
   --mdc-layout-grid-gutter-desktop: 20px;
   --mdc-layout-grid-column-width-desktop: 60px;
 }
+
+body {
+  font-family: 'Inconsolata', monospace;
+  font-size: 16px;
+  letter-spacing: 0;
+  font-kerning: normal;
+  font-variant-numeric: lining-nums slashed-zero;
+  font-variant-ligatures: common-ligatures contextual;
+  -webkit-font-feature-settings: "kern", "liga", "clig", "calt", "lnum", "zero";
+  font-feature-settings: "kern", "liga", "clig", "calt", "lnum", "zero";
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: geometricPrecision;
+}
+
+header,
+footer,
+section {
+  max-width: 40em;
+  margin: 0 auto;
+}
+
+h1, h2 {
+  font-family: 'Syne Mono', monospace;
+}
+
+ul {
+  list-style: square;
+}
