[www.topmonks.com] schema.org metadata

--- a/www.topmonks.com/src/html/shared/header.njk
+++ b/www.topmonks.com/src/html/shared/header.njk
@@ -11,7 +11,7 @@
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet">
-        <a class="tm-logo" href="/" title="Go to homepage">
+        <a property="isPartOf" class="tm-logo" href="/" title="Go to homepage">
           <svg class="monk" width="26px" height="32px" viewBox="0 0 30 36" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <g transform="translate(-268.000000, -13.000000)" fill-rule="nonzero">
                 <g id="header" transform="translate(250.000000, -103.000000)">
@@ -35,10 +35,10 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
         <nav id="navigation" class="tm-menu" aria-hidden="false">
           <ul class="tm-menu__list">
-            <li class=""><a href="/about-us/">about us</a></li>
-            <li class=""><a href="/meet-us/">meet us</a></li>
-            <li class=""><a href="/jobs/">jobs</a></li>
-            <li class=""><a href="/contact/">contacts</a></li>
+            <li class=""><a property="relatedLink" href="/about-us/">about us</a></li>
+            <li class=""><a property="relatedLink" href="/meet-us/">meet us</a></li>
+            <li class=""><a property="relatedLink" href="/jobs/">jobs</a></li>
+            <li class=""><a property="relatedLink" href="/contact/">contacts</a></li>
             <li class=""><a href="https://studio.topmonks.com/">startup studio</a></li>
           </ul>
         </nav>
