[www.topmonks.com] Added slash to vocab attribute

--- a/www.topmonks.com/src/html/layouts/topmonks.njk
+++ b/www.topmonks.com/src/html/layouts/topmonks.njk
@@ -29,7 +29,7 @@
   {% include "shared/app-icons.njk" %}
   {% include 'shared/analytics.njk' %}
 </head>
-<body id="page-{{page}}" vocab="https://schema.org" typeof="{{ pageType or 'WebPage' }}">
+<body id="page-{{page}}" vocab="https://schema.org/" typeof="{{ pageType or 'WebPage' }}">
 
 {% include 'shared/header.njk' %}
 
