--- a/zive.tv/src/html/topmonks-caffe/index.njk
+++ b/zive.tv/src/html/topmonks-caffe/index.njk
@@ -185,8 +185,7 @@
     </h1>
   </header>
   <div class="restream-box" style="--aspect-ratio: 16/9;">
-    <iframe src="https://embed.restream.io/player/index.html?token=8d4bf058144cf6049910377936e60cf1" width="480"
-            height="360" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/TRP5_avvfQc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="slido-box">
     <iframe src="https://app.sli.do/event/mqo0cdn4" height="100%" width="100%" frameBorder="0"
