--- a/www.hookamonk.com/src/html/components/header.njk
+++ b/www.hookamonk.com/src/html/components/header.njk
@@ -52,7 +52,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
         <nav id="navigation" class="tm-menu">
           <ul class="tm-menu__list">
-            <li><a href="https://shop.hookamonk.com/">Accessories</a></li>
+            <li><a href="https://shop.hookamonk.com/">E-shop</a></li>
             <li><a href="/catering">I want it for my lounge</a></li>
           </ul>
         </nav>
