Make favicon darkmode ready

--- a/www.hookamonk.com/src/html/layouts/main.njk
+++ b/www.hookamonk.com/src/html/layouts/main.njk
@@ -28,7 +28,7 @@
     })(window,document,'script','dataLayer','GTM-N3RNTWG');</script>
   <!-- End Google Tag Manager -->
 
-  <link href="/favicon-small.jpg" rel="shortcut icon" type="image/x-icon">
+  <link href="/favicon-small.png" rel="shortcut icon" type="image/png">
   {% include "../components/work-sans.njk" %}
   {{ css("typography") }}
   {{ css("main") }}
