Update sales contact to Penzesak

--- a/www.topmonks.cz/src/html/kontakt/index.njk
+++ b/www.topmonks.cz/src/html/kontakt/index.njk
@@ -172,7 +172,7 @@
         <p class="box_text-about">Know-how v&nbsp;oblasti retailu a fintechu nejlépe proberete s&nbsp;Ondrou.</p>
         <div class="mdc-layout-grid__inner">
           <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-            <img alt="[photo] Ondrej Tupý"
+            <img alt="[foto] Jirka Pénzeš"
               loading="lazy"
               src="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_auto,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy"
               srcset="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 1x,
@@ -182,8 +182,8 @@
               width="112" height="112">
           </div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <p><span itemprop="name">Ondrej Tupý</span><br>
-              <a itemprop="telephone" href="tel:+420730581488">+420 730 581 488</a><br>
+            <p><span itemprop="name">Jiří Pénzeš</span><br>
+              <a itemprop="telephone" href="tel:+420732364404">+420 732 364 404</a><br>
               <a itemprop="email" href="mailto:sales@​topmonks.com">sales@​topmonks.com</a></p>
           </div>
         </div>
