Update sales contact to Penzesak

--- a/www.topmonks.com/src/html/contact/index.njk
+++ b/www.topmonks.com/src/html/contact/index.njk
@@ -154,14 +154,14 @@
           property="employee" typeof="Person">
           <h3>Sales</h3>
           <p class="box_text-about">If you are a medium- or large-sized organization and looking to solve an existing
-            challenge, please get in touch with &nbsp;Ondrej.</p>
+            challenge, please get in touch with &nbsp;Jirka.</p>
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell">
-              {{ avatar(team.members['ondrej-tupy'], 112) }}
+              {{ avatar(team.members['jiri-penzes'], 112) }}
             </div>
             <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-              <p><span property="name">Ondrej Tupý</span><br>
-                <a property="telephone" href="tel:+420730581488">+420&nbsp;730&nbsp;581&nbsp;488</a><br/>
+              <p><span property="name">Jirka Pénzeš</span><br>
+                <a property="telephone" href="tel:+420732364404">+420&nbsp;732&nbsp;364&nbsp;404</a><br/>
                 <a property="email" href="mailto:sales&#64;topmonks.com">sales@​topmonks.com</a></p>
             </div>
           </div>
