--- a/www.hackercamp.cz/src/stylesheets/main.scss
+++ b/www.hackercamp.cz/src/stylesheets/main.scss
@@ -1,5 +1,10 @@
 @use "@material/layout-grid/mdc-layout-grid";
 
+img.responsive {
+  width: 100%;
+  height: auto;
+}
+
 @media screen and (min-width: 600px) {
   .hc-card.hc-card--semidecorated {
     padding: 4em;
