[www.hackercamp.cz] Hero responsivity

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -118,13 +118,6 @@
         font-style: normal;
       }
 
-      p,
-      ul {
-        max-width: 60em;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
       header,
       footer,
       section {
@@ -322,7 +315,7 @@
       <header id="top" class="hc-hero mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
           <div
-            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop"
+            class="hc-hero__inner mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop"
           >
             <hgroup>
               <h1 property="name">Hacker Camp</h1>
