[www.hackercamp.cz] Return typographic limits on ul

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -118,6 +118,12 @@
         font-style: normal;
       }
 
+      ul {
+        max-width: 60em;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
       header,
       footer,
       section {
